--- a/src/app/articles/header/header.component.html
+++ b/src/app/articles/header/header.component.html
@@ -1,10 +1,43 @@
 <header>
-  <div class="header-background">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+  <a href="/home" class="name">
+    <span>i</span>
+    <span>.</span>
+    <span>gnacio</span>
+    <span>villarreal</span>
+  </a>
+
+  <div class="menu-hamburger">
+    <input type="checkbox" id="menu" [checked]="isNavBarActive" (change)="toggleNavBar($event)"/>
+    <label for="menu" class="background-menu"></label>
+    <label for="menu" class="content-menu">
+      <svg viewBox="0 0 32 32">
+        <path
+          class="line line-top-bottom"
+          d="M27 10 13 10C10.8 10 9 8.2 9 6 9 3.5 10.8 2 13 2 15.2 2 17 3.8 17 6L17 26C17 28.2 18.8 30 21 30 23.2 30 25 28.2 25 26 25 23.8 23.2 22 21 22L7 22"
+        ></path>
+        <path class="line" d="M7 16 27 16"></path>
+      </svg>
+    </label>
   </div>
-  <a href="/home">i. villarreal</a>
-  <app-menu-hamburger></app-menu-hamburger>
 </header>
+
+<div class="nav-bar" *ngIf="isNavBarActive">
+  <div class="contact">
+    <h3>Contactame</h3>
+    <h2>ignaciovillarreal20031231&#64;gmail.com</h2>
+    <div class="network">
+      <a href="">Github</a>
+      <a href="">Linkedin</a>
+    </div>
+  </div>
+  <nav>
+    <ul>
+      <li>
+        <a href="/about-me">Sobre mi</a>
+      </li>
+      <li>
+        <a href="/projects">Proyectos</a>
+      </li>
+    </ul>
+  </nav>
+</div>
