--- a/src/app/articles/home/home.component.html
+++ b/src/app/articles/home/home.component.html
@@ -1,43 +1,28 @@
-<app-header></app-header>
-
-<section class="introduction">
-  <div class="introduction-content">
-    <div class="introduction-title">
-      <p>Ingeniero informático.</p>
-      <p>Ayudo a las empresas a diseñar, desarrollar y entregar soluciones de software de alta calidad que generan un impacto significativo.</p>
-    </div>
-  </div>
-</section>
-
-<section class="about">
-  <div class="about-content">
-    <h2>¿Quien?</h2>
-    <div class="about-answere">
-      <p>Hola, soy Ignacio Villarreal, un apasionado estudiante de Ingeniería Informática en la Universidad Católica del Uruguay. Tengo 21 años, vivo en Paso de la Arena, un barrio de Montevideo, y desde siempre he sentido una fuerte atracción por el mundo de las computadoras. Mi interés comenzó con los videojuegos, pero con el tiempo descubrí que lo que realmente me apasiona es crear y entender cómo funcionan las tecnologías detrás de estas maquinas.</p>
-      <p>Si tuviera que definirme en tres palabras, serían: responsable, resiliente y dedicado. Me gusta enfrentar retos con una mentalidad de aprendizaje continuo y siempre busco mejorar tanto a nivel técnico como personal.</p>
-      <p>Fuera del ámbito académico, intento balancear mi vida con actividades que me apasionan. Toco el piano cada vez que puedo para desconectar un rato. También hago ejercicio diariamente. Además, disfruto mucho leer, especialmente libros que exploran temas de filosofía y moral, como 1984, Un mundo feliz y Rebelión en la granja.</p>
-      <p>Aunque todavía no tengo experiencia profesional, he trabajado en varios proyectos personales que reflejan mi pasión por la tecnología. Este portafolio reúne algunos de esos proyectos, y cada uno de ellos representa un paso más en mi desarrollo como ingeniero informático.</p>
-    </div>
-  </div>
-</section>
-
-<section class="profile">
-  <div class="profile-content">
-    <div class="image">
-      <img src="./bitmap.svg">
-    </div>
-  </div>
-  <div class="profile-background">
-    <div class="square-1">
-      <div class="square-2">
-        <div class="square-3">
-          <div class="square-4">
-
-          </div>
-        </div>
+<div class="home">
+  <a href="/about-me" class="about">
+    <div class="content">
+      <div class="title">
+        <h2>Sobre mi</h2>
+        <div class="underlined"></div>
       </div>
     </div>
+  </a>
+  <div class="other-links">
+    <a href="/projects" class="projects">
+      <div class="content">
+        <div class="title">
+          <h2>Proyectos</h2>
+          <div class="underlined"></div>
+        </div>
+      </div>
+    </a>
+    <a href="/" class="soon">
+      <div class="content">
+        <div class="title">
+          <h2>Pronto ...</h2>
+          <div class="underlined"></div>
+        </div>
+      </div>
+    </a>
   </div>
-</section>
-
-<app-skills-showcase></app-skills-showcase>
+</div>
