--- a/src/app/articles/header/header.component.css
+++ b/src/app/articles/header/header.component.css
@@ -1,62 +1,245 @@
 header {
   width: 100%;
-  padding: 10px 20px;
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: fixed;
-}
-
-.header-background {
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 300%;
-  pointer-events: none;
-  z-index: 6;
-  transform: translateZ(0) translateY(-30%);
-}
-
-.header-background > div {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-}
-
-.header-background div:nth-child(1) {
-  backdrop-filter: blur(1px);
-  mask: linear-gradient(0deg, hsla(0, 0%, 100%, 0) 0, #fff 12.5%, #fff 37.5%, hsla(0, 0%, 100%, 0) 50%);
-  z-index: 2;
-}
-
-.header-background div:nth-child(2) {
-  backdrop-filter: blur(2px);
-  mask: linear-gradient(0deg, hsla(0, 0%, 100%, 0) 12.5%, #fff 37.5%, #fff 50%, hsla(0, 0%, 100%, 0) 62.5%);
-  z-index: 3;
-}
-
-.header-background div:nth-child(3) {
-  backdrop-filter: blur(4px);
-  mask: linear-gradient(0deg, hsla(0, 0%, 100%, 0) 37.5%, #fff 50%, #fff 62.5%, hsla(0, 0%, 100%, 0) 75%);
+  padding: 2vh 4vw;
   z-index: 4;
 }
 
-.header-background div:nth-child(4) {
-  backdrop-filter: blur(8px);
-  mask: linear-gradient(0deg, hsla(0, 0%, 100%, 0) 50%, #fff 62.5%, #fff 75%, hsla(0, 0%, 100%, 0) 87.5%);
-  z-index: 5;
-}
-
-a {
-  font-size: 20px;
+.name {
+  font-size: clamp(20px, 3vw, 30px);
   text-decoration: none;
-  color: black;
   padding: 10px;
-  z-index: 7;
+  transition: color .2s ease-out;
+  mask: linear-gradient(-60deg, #000 30%, rgba(0, 0, 0, .333), #000 70%) right / 300% 100%;
+  font-family: "Poiret One", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
-app-menu-hamburger {
-  z-index: 7;
+.name:hover {
+  animation: shimmer 2.5s infinite;
+}
+
+@keyframes shimmer {
+  to {
+    -webkit-mask-position: left;
+  }
+}
+
+.name span {
+  color: white;
+}
+
+.name span:nth-child(1) {
+  display: inline-block;
+}
+
+.name span:nth-child(2) {
+  max-width: 0;
+  opacity: 1;
+  transition: all .15s cubic-bezier(.215,.61,.355,1);
+  display: inline-block;
+}
+
+.name:hover span:nth-child(2) {
+  opacity: 0;
+  transition: all .15s cubic-bezier(.55,.055,.675,.19);
+}
+
+.name span:nth-child(3) {
+  max-width: 0;
+  opacity: 0;
+  transition: all .4s cubic-bezier(.215,.61,.355,1);
+  visibility: hidden;
+  will-change: max-width;
+  display: inline-block;
+}
+
+.name:hover span:nth-child(3) {
+  max-width: 200px;
+  opacity: 1;
+  transition: all .4s cubic-bezier(.55,.055,.675,.19);
+  visibility: visible;
+}
+
+.name span:nth-child(4) {
+  margin-left: 10px;
+  display: inline-block;
+}
+
+.menu-hamburger {
+  width: 65px;
+  height: 65px;
+  position: relative;
+}
+
+.menu-hamburger input {
+  display: none;
+}
+
+.menu-hamburger .background-menu {
+  width: 100%;
+  height: 100%;
+  background: white;
+  border-radius: 50%;
+  transition: transform 0.3s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.menu-hamburger:hover .background-menu {
+  transform: scale(1.1);
+}
+
+.menu-hamburger .content-menu {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+}
+
+.menu-hamburger svg {
+  height: 2.4em;
+  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-hamburger .line {
+  fill: none;
+  stroke: black;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 2.5;
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+  stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1),
+  stroke 0.3s ease;
+}
+
+.menu-hamburger .line-top-bottom {
+  stroke-dasharray: 12 63;
+}
+
+.menu-hamburger input:checked ~ .content-menu svg {
+  transform: rotate(-45deg);
+}
+
+.menu-hamburger input:checked ~ .content-menu svg .line-top-bottom {
+  stroke-dasharray: 20 300;
+  stroke-dashoffset: -32.42;
+}
+
+.nav-bar {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 3;
+  display: flex;
+}
+
+.contact, nav {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact {
+  flex-direction: column;
+  gap: 30px;
+  background: #f99797;
+  padding: 10px;
+}
+
+.contact h3 {
+  font-size: clamp(20px, 3vw, 30px);
+  color: #303f80;
+  text-transform: uppercase;
+}
+
+.contact h2 {
+  font-size: clamp(14px, 1.8vw, 30px);
+  color: white;
+  text-transform: uppercase;
+}
+
+.network {
+  display: flex;
+  gap: 30px;
+}
+
+.network a {
+  text-decoration: none;
+  color: white;
+  font-size: clamp(16px, 5vw, 26px);
+  text-transform: uppercase;
+  transition: color .2s ease-out;
+}
+
+.network a:hover {
+  color: #7d5454;
+}
+
+nav {
+  background: #faabab;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+nav li {
+  width: 100%;
+}
+
+nav a {
+  text-decoration: none;
+  color: white;
+  font-size: clamp(36px, 3vw, 50px);
+  transition: color .2s ease-out;
+}
+
+nav a:hover {
+  color: #303f80;
+}
+
+@media (max-width: 900px) {
+  .menu-hamburger {
+    width: 40px;
+    height: 40px;
+  }
+
+  .menu-hamburger svg {
+    height: 1.8em;
+  }
+
+  .menu-hamburger .line {
+    stroke-width: 2.5;
+  }
+
+  .nav-bar {
+    flex-direction: column-reverse;
+  }
+
+  .contact {
+    width: 100%;
+    height: 75%;
+  }
+
+  nav {
+    height: 125%;
+  }
 }
