--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Crimson+Pro:wght@200..900&family=Fredoka:wght@300..700&family=Josefin+Slab:wght@100..700&family=Manrope:wght@200..800&family=Mulish:wght@200..1000&family=Poiret+One&family=Quicksand:wght@300..700&family=Raleway:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
 
 * {
   margin: 0;
@@ -10,4 +10,13 @@ html  {
   scroll-behavior: smooth;
 }
 
-body {}
+body {
+  font-family: "Poiret One", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
