--- a/src/app/articles/project-view-1/project-view-1.component.css
+++ b/src/app/articles/project-view-1/project-view-1.component.css
@@ -43,22 +43,38 @@ h1 {
 
 .progress-indicator {
   position: absolute;
-  right: 20px;
-  top: 50%;
-  transform: translateY(-50%);
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 10px;
+  width: 100%;
 }
 
 .progress-indicator span {
-  width: 10px;
-  height: 10px;
-  background-color: gray;
+  width: 6px;
+  height: 6px;
+  background-color: #aeaeae;
   border-radius: 50%;
   transition: background-color 1s;
 }
 
 .progress-indicator span.active {
+  background-color: red;
+}
+
+.progress-indicator button {
+  width: 10px;
+  height: 10px;
+  background-color: gray;
+  border-radius: 50%;
+  transition: background-color 1s;
+  border: none;
+  cursor: pointer;
+}
+
+.progress-indicator button.active {
   background-color: red;
 }
