--- a/src/app/articles/projects/projects.component.css
+++ b/src/app/articles/projects/projects.component.css
@@ -1,10 +1,9 @@
 .container {
   width: 100%;
-  background: #f76c6c;
   transition: all .3s ease;
 }
 
-.project-preview-1, .project-preview-2, .project-preview-3, .project-preview-4 {
+.project-preview-1, .project-preview-2, .project-preview-3, .project-preview-4, .project-preview-5, .project-preview-6, .project-preview-7, .project-preview-8 {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -31,24 +30,32 @@ h1 {
   transition: opacity 0.8s ease-in-out;
 }
 
+
 .progress-indicator {
-  position: absolute;
+  position: fixed;
   right: 20px;
   top: 50%;
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
+  align-items: end;
   gap: 10px;
 }
 
-.progress-indicator span {
-  width: 10px;
-  height: 10px;
-  background-color: gray;
-  border-radius: 50%;
-  transition: background-color 1s;
+.progress-indicator button {
+  width: 20px;
+  height: 5px;
+  background-color: rgba(0, 0, 0, 0.30);
+  transition: background-color 1s, width .3s ease-in-out;
+  border: none;
+  cursor: pointer;
 }
 
-.progress-indicator span.active {
-  background-color: red;
+.progress-indicator button.active {
+  background-color: white;
+  width: 40px;
+}
+
+.progress-indicator button:hover {
+  width: 40px;
 }
