--- a/src/app/articles/header/header.component.css
+++ b/src/app/articles/header/header.component.css
@@ -143,6 +143,15 @@ header {
   position: fixed;
   z-index: 3;
   display: flex;
+  transform: scale(0);
+  opacity: 0;
+  transform-origin: center;
+  transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
+}
+
+.nav-bar.active {
+  transform: scale(1);
+  opacity: 1;
 }
 
 .contact, nav {
@@ -177,6 +186,16 @@ header {
   gap: 30px;
 }
 
+.contact h3, .contact h2, .network {
+  transform: translateX(-1000px);
+  transition: all .5s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition-delay: .4s;
+}
+
+.nav-bar.active .contact h3, .nav-bar.active .contact h2, .nav-bar.active .network {
+  transform: translateX(0);
+}
+
 .network a {
   text-decoration: none;
   color: white;
@@ -203,13 +222,20 @@ nav ul {
 
 nav li {
   width: 100%;
+  transform: translateX(1000px);
+  transition: all .5s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition-delay: .4s;
+}
+
+.nav-bar.active nav li {
+  transform: translateX(0);
 }
 
 nav a {
   text-decoration: none;
   color: white;
   font-size: clamp(36px, 3vw, 50px);
-  transition: color .2s ease-out;
+  transition: color 0.2s ease-out;
 }
 
 nav a:hover {
