--- a/src/app/articles/header/header.component.html
+++ b/src/app/articles/header/header.component.html
@@ -21,7 +21,7 @@
   </div>
 </header>
 
-<div class="nav-bar" *ngIf="isNavBarActive">
+<div class="nav-bar" *ngIf="isNavBarActive" id="navBar">
   <div class="contact">
     <h3>Contactame</h3>
     <h2>ignaciovillarreal20031231&#64;gmail.com</h2>
