--- a/src/app/articles/project-view-1/project-view-1.component.css
+++ b/src/app/articles/project-view-1/project-view-1.component.css
@@ -42,7 +42,7 @@ h1 {
 }
 
 .progress-indicator {
-  position: absolute;
+  position: fixed;
   bottom: 40px;
   left: 50%;
   transform: translateX(-50%);
@@ -56,19 +56,19 @@ h1 {
 .progress-indicator span {
   width: 6px;
   height: 6px;
-  background-color: #aeaeae;
+  background-color: rgba(0, 0, 0, 0.20);
   border-radius: 50%;
-  transition: background-color 1s;
+  transition: background-color .6s;
 }
 
 .progress-indicator span.active {
-  background-color: red;
+  background-color: white;
 }
 
 .progress-indicator button {
-  width: 10px;
-  height: 10px;
-  background-color: gray;
+  width: 12px;
+  height: 12px;
+  background-color: rgba(0, 0, 0, 0.40);
   border-radius: 50%;
   transition: background-color 1s;
   border: none;
@@ -76,5 +76,5 @@ h1 {
 }
 
 .progress-indicator button.active {
-  background-color: red;
+  background-color: white;
 }
