--- a/src/app/articles/projects/projects.component.css
+++ b/src/app/articles/projects/projects.component.css
@@ -1,35 +1,67 @@
-.container {
-  width: 100%;
-  transition: all .3s ease;
-}
-
-.project-preview-1, .project-preview-2, .project-preview-3, .project-preview-4, .project-preview-5, .project-preview-6, .project-preview-7, .project-preview-8 {
+.projects {
   width: 100%;
   height: 100vh;
+  transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.project-preview {
+  width: 100%;
+  height: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 30px 70px;
 }
 
-h1 {
-  font-size: 3rem;
-  opacity: 0;
-  transform: translateX(-100%);
-  animation: fadeInFromLeft 0.8s forwards;
+.project-preview h1 {
+  font-size: clamp(30px, 10vw, 120px);
+  color: white;
+  animation: fadeInFromTop 0.6s forwards;
+  font-family: 'Milston';
+  letter-spacing: 1rem;
+  text-align: center;
+  margin-bottom: 30px;
+  line-height: 4rem;
 }
 
-@keyframes fadeInFromLeft {
-  to {
-    opacity: 1;
-    transform: translateX(0);
+.project-preview p {
+  color: white;
+  font-size: clamp(16px, 3vw, 26px);
+  max-width: 1000px;
+  text-align: center;
+  margin-bottom: 40px;
+  animation: fadeInFromBottom 0.6s forwards;
+}
+
+.project-preview button {
+  padding: 10px 45px;
+  border: none;
+  border-radius: 30px;
+  background-color: rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  color: white;
+  transition: all .6s cubic-bezier(0.215, 0.610, 0.355, 1);
+  animation: fadeInFromBottom 0.6s forwards;
+}
+
+.project-preview button:hover {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+@keyframes fadeInFromBottom {
+  from {
+    opacity: 0;
+    transform: translateY(50%);
   }
 }
 
-
-.container > section {
-  transition: opacity 0.8s ease-in-out;
+@keyframes fadeInFromTop {
+  from {
+    opacity: 0;
+    transform: translateY(-50%);
+  }
 }
-
 
 .progress-indicator {
   position: fixed;
@@ -42,20 +74,76 @@ h1 {
   gap: 10px;
 }
 
-.progress-indicator button {
+.progress-indicator .screen {
   width: 20px;
   height: 5px;
   background-color: rgba(0, 0, 0, 0.30);
-  transition: background-color 1s, width .3s ease-in-out;
+  transition: background-color 1s, width .3s ease-in-out, height .3s ease-in-out;
   border: none;
   cursor: pointer;
 }
 
-.progress-indicator button.active {
+.progress-indicator .screen.active {
   background-color: white;
   width: 40px;
 }
 
-.progress-indicator button:hover {
+.progress-indicator .screen:hover {
   width: 40px;
+}
+
+.progress-indicator .before, .progress-indicator .after {
+  width: 20px;
+  height: 20px;
+  border: none;
+  background-color: white;
+  cursor: pointer;
+}
+
+.progress-indicator .before {
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+}
+
+.progress-indicator .after {
+  clip-path: polygon(50% 100%, 0% 0%, 100% 0%);
+}
+
+.progress-indicator .before:hover, .progress-indicator .after:hover {
+  background-color: rgba(0, 0, 0, 0.30);
+}
+
+@media (max-width: 900px) {
+  .project-preview {
+    padding: 15px 30px;
+  }
+
+  .progress-indicator {
+    right: 50%;
+    bottom: 20px;
+    transform: translateX(50%);
+    top: auto;
+    gap: 10px;
+    flex-direction: row;
+  }
+  
+  .progress-indicator .screen {
+    width: 5px;
+    height: 20px;
+  }
+  
+  .progress-indicator .screen.active {
+    height: 40px;
+    width: 5px;
+  }
+  
+  .progress-indicator .screen:hover {
+    height: 40px;
+    width: 5px;
+  }
+  
+  .progress-indicator .before, .progress-indicator .after {
+    height: 20px;
+    width: 20px;
+    transform: rotate(270deg);
+  }
 }
