--- a/src/app/articles/header/header.component.html
+++ b/src/app/articles/header/header.component.html
@@ -28,6 +28,7 @@
     <div class="network">
       <a href="">Github</a>
       <a href="">Linkedin</a>
+      <a href="./rest-101.pdf" download="rest-101.pdf">CV</a>
     </div>
   </div>
   <nav>
