--- a/src/app/articles/home/home.component.html
+++ b/src/app/articles/home/home.component.html
@@ -25,4 +25,5 @@
       </div>
     </a>
   </div>
+  <app-summary-card *ngIf="isSummaryCardVisible" (close)="closeSummaryCard()"></app-summary-card>
 </div>
