--- a/src/app/articles/home/home.component.css
+++ b/src/app/articles/home/home.component.css
@@ -8,21 +8,9 @@
 .about, .soon, .projects {
   width: 100%;
   height: 100%;
-  background: #a8d0e6;
   cursor: pointer;
   text-decoration: none;
-}
-
-.about {
-  background: #a8d0e6;
-}
-
-.soon {
-  background: #24305e;
-}
-
-.projects {
-  background: #f76c6c;
+  position: relative;
 }
 
 .about .content, .soon .content, .projects .content {
@@ -32,6 +20,8 @@
   align-items: end;
   justify-content: start;
   padding: 40px;
+  position: relative;
+  z-index: 2;
 }
 
 .about .title, .soon .title, .projects .title {
@@ -48,6 +38,7 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .about .title .underlined, .soon .title .underlined, .projects .title .underlined {
@@ -61,6 +52,168 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+}
+
+.about .background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+
+.about .background .color {
+  width: 100%;
+  height: 100%;
+  background: #82c4e7;
+  animation: animation-1 2s forwards cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: all .5s cubic-bezier(0.39, 0.575, 0.565, 1);
+}
+
+.about:hover .background .color {
+  background: #a4d4ec;
+}
+
+@keyframes animation-1 {
+  0% {
+    width: 0;
+    height: 0;
+    border-radius: 999px 0 0 999px;
+  }
+
+  100% {
+    width: 2000px;
+    height: 4000px;
+  }
+}
+
+.projects .background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  display: flex;
+  align-items: end;
+  justify-content: start;
+}
+
+.projects .background .color {
+  width: 100%;
+  height: 100%;
+  background: #f76c6c;
+  animation: animation-2 2s forwards cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: all .5s cubic-bezier(0.39, 0.575, 0.565, 1);
+}
+
+.projects:hover .background .color {
+  background: #f99898;
+}
+
+@keyframes animation-2 {
+  0% {
+    width: 0;
+    height: 0;
+    border-radius: 0 999px 0 0;
+  }
+
+  100% {
+    width: 2000px;
+    height: 2000px;
+  }
+}
+
+.soon .background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  display: flex;
+  align-items: start;
+  justify-content: start;
+}
+
+.soon .background .color {
+  width: 100%;
+  height: 100%;
+  background: #24305e;
+  animation: animation-3 2s forwards cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: all .5s cubic-bezier(0.39, 0.575, 0.565, 1);
+}
+
+.soon:hover .background .color {
+  background: #3e4a78;
+}
+
+@keyframes animation-3 {
+  0% {
+    width: 0;
+    height: 0;
+    border-radius: 0 0 999px 0;
+  }
+
+  100% {
+    width: 2000px;
+    height: 2000px;
+  }
+}
+
+.hover-text {
+  animation: animation-4 5s infinite ease;
+}
+
+@keyframes animation-4 {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  6% {
+    transform: rotate(0.5deg);
+  }
+
+  8% {
+    transform: rotate(0deg);
+  }
+
+  10% {
+    transform: rotate(-0.5deg);
+  }
+
+  12% {
+    transform: rotate(0deg);
+  }
+
+  14% {
+    transform: rotate(0.5deg);
+  }
+
+  16% {
+    transform: rotate(0deg);
+  }
+
+  18% {
+    transform: rotate(-0.5deg);
+  }
+
+  20% {
+    transform: rotate(0deg);
+  }
+
+  22% {
+    transform: rotate(0.5deg);
+  }
+
+  24% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
 @media (max-width: 900px) {
@@ -77,4 +230,5 @@ app-summary-card {
   position: absolute;
   top: 30%;
   left: 0;
+  z-index: 3;
 }
