--- a/src/app/articles/about/about.component.html
+++ b/src/app/articles/about/about.component.html
@@ -1,12 +1,12 @@
 <app-about-intro></app-about-intro>
 <app-about-traits></app-about-traits>
 <app-about-engineer></app-about-engineer>
-<div class="background-1">
+<div class="background-1 bg-color">
     <app-shape-8></app-shape-8>
 </div>
 <app-about-photo></app-about-photo>
 <app-timeline></app-timeline>
-<div class="background-2">
+<div class="background-2 bg-color">
     <app-shape-9></app-shape-9>
 </div>
 <app-passions></app-passions>
